--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="http://localhost:3000/@id/virtual:wxt-inline-script?1672847312" type="module"></script>
-
-  <script type="module" src="http://localhost:3000/@vite/client"></script>
-<script src="http://localhost:3000/@id/virtual:wxt-html-plugins" type="module"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keyboard Typing Simulator</title>  <script type="module" crossorigin="" src="/chunks/popup-CjKgyXxq.js"></script>
+  <title>Keyboard Typing Simulator</title>
+  <script type="module" crossorigin src="/chunks/popup-CjX4Mlre.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/popup-DMxQHWVD.css">
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="http://localhost:3000/entrypoints/popup/main.tsx"></script>
+  <div id="root"></div>
 </body>
 </html>
