added pause stop button and advanced features

--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Typing Simulator</title>
-  <script type="module" crossorigin src="/chunks/popup-CJvjV1Q8.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/popup-B2sAWc25.css">
+  <script type="module" crossorigin src="/chunks/popup-30cNfL_g.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/popup-k0UHSPIH.css">
 </head>
 <body>
   <div id="root"></div>
