--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Typing Simulator</title>
-  <script type="module" crossorigin src="/chunks/popup-30cNfL_g.js"></script>
+  <script type="module" crossorigin src="/chunks/popup-DyXfkGbk.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/popup-k0UHSPIH.css">
 </head>
 <body>
