--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Typing Simulator</title>
-  <script type="module" crossorigin src="/chunks/popup-zgOU3smO.js"></script>
+  <script type="module" crossorigin src="/chunks/popup-B5HkW2Ae.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/popup-Dyk9PP2f.css">
 </head>
 <body>
