--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Typing Simulator</title>
-  <script type="module" crossorigin src="/chunks/popup-De9uV-Kd.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/popup-DKWUigEx.css">
+  <script type="module" crossorigin src="/chunks/popup-BMWsWSR0.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/popup-DycOD6AK.css">
 </head>
 <body>
   <div id="root"></div>
