--- a/.output/chrome-mv3/popup.html
+++ b/.output/chrome-mv3/popup.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Typing Simulator</title>
-  <script type="module" crossorigin src="/chunks/popup-Ben4uKlP.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/popup-gH6JxCCl.css">
+  <script type="module" crossorigin src="/chunks/popup-D1PD_5O-.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/popup-Cfm2Rer5.css">
 </head>
 <body>
   <div id="root"></div>
